secondfile/objects/DHStatus_Tie_Down_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details- DHStatus-Tie Down Details</description>
    <fields>
        <fullName>DHStatus_Design_Layout_Record_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Tie Down Details-DHStatus-Design Layout Record Details</description>
        <label>DHStatus-Design Layout Record Details</label>
        <referenceTo>DHStatus_Design_Layout_Record_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Tie Down Details</relationshipLabel>
        <relationshipName>DHStatus_Tie_Down_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locations_CLLI_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Tie Down Details-Locations CLLI Code</description>
        <label>Locations CLLI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tie_Down_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Tie Down Details-Tie Down ID</description>
        <label>Tie Down ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Tie Down Details</label>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>DHStatus-Tie Down Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Tie Down Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>